# swagger/swagger.json
@@ -259,6 +259,140 @@
           }
         }
       }
+    },
+   "/basket": {
+      "get": {
+        "summary": "Get all basket items",
+        "responses": {
+          "200": {
+            "description": "List of basket items",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "basketId": { "type": "integer" },
+                      "userId": { "type": "integer" },
+                      "userName": { "type": "string" },
+                      "name": { "type": "string" },
+                      "author": { "type": "string" },
+                      "pubDate" : { "type": "date" },
+                      "price": { "type": "integer" },
+                      "image": { "type": "string" },
+                      "commentCount": { "type": "integer" },
+                      "viewCount": { "type": "integer",
+                      "paid": { "type": "boolean"},
+                      "bookId": { "type": "integer" },
+                      "rating": { "type": "number" }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Add a book to the basket",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "basketItem",
+            "description": "Basket item data",
+            "schema": {
+              "type": "object",
+              "properties": {
+                      "userId": { "type": "integer" },
+                      "userName": { "type": "string" },
+                      "name": { "type": "string" },
+                      "author": { "type": "string" },
+                      "pubDate" : { "type": "date" },
+                      "price": { "type": "integer" },
+                      "image": { "type": "string" },
+                      "commentCount": { "type": "integer" },
+                      "viewCount": { "type": "integer",
+                      "paid": { "type": "boolean"},
+                      "bookId": { "type": "integer" },
+                      "rating": { "type": "number" }
+              }
+            }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Book added to basket"
+          }
+        }
+      }
+    },
+    "/basket/{bookId}": {
+      "get": {
+        "summary": "Get a specific basket item by book ID",
+        "parameters": [
+          {
+            "name": "bookId",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID of the book to retrieve from the basket"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Basket item found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                     "basketId": { "type": "integer" },
+                      "userId": { "type": "integer" },
+                      "userName": { "type": "string" },
+                      "name": { "type": "string" },
+                      "author": { "type": "string" },
+                      "pubDate" : { "type": "date" },
+                      "price": { "type": "integer" },
+                      "image": { "type": "string" },
+                      "commentCount": { "type": "integer" },
+                      "viewCount": { "type": "integer",
+                      "paid": { "type": "boolean"},
+                      "bookId": { "type": "integer" },
+                      "rating": { "type": "number" }
+                  }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Basket item not found"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Remove a book from the basket",
+        "parameters": [
+          {
+            "name": "bookId",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID of the book to remove from the basket"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Book removed from basket"
+          },
+          "404": {
+            "description": "Book not found in basket"
+          }
+        }
+      }
     }
   }
+}
 }
